apps/dev/echovote/client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echovote-client
  namespace: echovote-dev
  labels:
    app: echovote-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echovote-client
  template:
    metadata:
      labels:
        app: echovote-client
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: client
          image: ghcr.io/chenarrr/echovote-client:dev-20260510192118 # {"$imagepolicy": "flux-system:echovote-client-dev"}
          ports:
            - containerPort: 80
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
            - name: tmp
              mountPath: /tmp
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 30m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
        - name: tmp
          emptyDir: {}
