apps/dev/echovote/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echovote-client
  namespace: echovote-dev
spec:
  selector:
    app: echovote-client
  ports:
    - name: http
      port: 80
      targetPort: 80
